--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^19.1.0",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "react-router-dom": "^7.6.2",
         "recharts": "^2.15.3",
         "styled-components": "^6.1.18"
     },
